--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -290,11 +290,11 @@ http://www20.gencat.cat/portal/site/Llengcat/
 <h4><span class="section-number-4">2.1.4</span> Migration</h4>
 <img src="./images/migrationsbewegungen.png" alt="migrationsbewegungen.png" />
 
+<aside class="notes">
 <p>
-#+BEING<sub>NOTES</sub>
 -&gt; Wirkung der Krise
-#+END<sub>NOTES</sub>
 </p>
+</aside>
 
 </section>
 <section id="sec-2-1-5"  data-background="white">
@@ -312,13 +312,13 @@ http://www20.gencat.cat/portal/site/Llengcat/
 <section id="sec-2-1-6" >
 
 <h4><span class="section-number-4">2.1.6</span> Mehrsprachigkeit (nach meist verwendeter Sprache geordnet) (Stand: 2013)</h4>
+<aside class="notes">
 <p>
-#+BEING<sub>NOTES</sub>
 -&gt; aktueller und ausführlicher (leider beziehen sich die Statistiken auf das ganze Bundesland, man würde noch höhere Assoziation in BCN erwarten)
 -&gt; einerseits bleiben die Verhältnisse zwischen Erstsprache und meist verw. gleich/ähnlich
 -&gt; andererseits: Kreuzeffekt zwischen Erstsprache und Identifikationssprache (statistisch signifikante Assoziation von Katalonisch und Ident.sprache)
-#+END<sub>NOTES</sub>
 </p>
+</aside>
 
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -926,25 +926,24 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 <section id="sec-3-3-1" >
 
 <h4><span class="section-number-4">3.3.1</span> Partitiva (Grammatikalisierung?):</h4>
-<p class="fragment role-in">
--&gt; &bdquo;<i>Porque es una zona de inmigrantes, entonces hay &#x2026; <b>de gitanos</b>.</i>&ldquo;
--&gt; (Weil es ist eine Migrantenzone, und es gibt also (der) Zigeuner)
-</p>
 <aside class="notes">
 <p>
 -*normal* in Ausdruecken wie &lsquo;hubo de todo eso&rsquo;
 </p>
 </aside>
+<ul class="org-ul">
+<li class="fragment role-in">&bdquo;<i>Porque es una zona de inmigrantes, entonces hay &#x2026; <b>de gitanos</b>.</i>&ldquo;
+<ul class="org-ul">
+<li>(Weil es ist eine Migrantenzone, und es gibt also (der) Zigeuner)
+</li>
+</ul>
+</li>
+</ul>
 
 </section>
 <section id="sec-3-3-2" >
 
-<h4><span class="section-number-4">3.3.2</span> <span class="underline">de</span> als &sbquo;verbal transition&lsquo; (Grammatikalisierung?):</h4>
-<p class="fragment role-in">
--&gt; &bdquo;<i>Prefirieron <b>de</b> no liarla con dos idiomas.</i>&ldquo;
--&gt; Sie bevorzugten (um) nicht zu verwirren mit 2 Sprachen.
-</p>
-
+<h4><span class="section-number-4">3.3.2</span> &bdquo;de&ldquo; als <i>verbal transition</i> (Grammatikalisierung?):</h4>
 <aside class="notes">
 <p>
 mit vorfalle in anderen spanischen Dialekten
@@ -952,14 +951,19 @@ mit vorfalle in anderen spanischen Dialekten
 </p>
 </aside>
 
+<ul class="org-ul">
+<li class="fragment role-in">&bdquo;<i>Prefirieron <b>de</b> no liarla con dos idiomas.</i>&ldquo;
+<ul class="org-ul">
+<li>Sie bevorzugten (um) nicht zu verwirren mit 2 Sprachen.
+</li>
+</ul>
+</li>
+</ul>
+
 </section>
 <section id="sec-3-3-3" >
 
 <h4><span class="section-number-4">3.3.3</span> redundante Verneinung (Intensivierung?):</h4>
-<p class="fragment role-in">
--&gt; &bdquo;<i>Si votabas CiU, <b>tampoco no</b> avanzaban</i>&ldquo;
--&gt; Wenn du CiU wähltest, auch-nicht nicht fortschritten 
-</p>
 <aside class="notes">
 <p>
 -mit vorfalle in anderen spanischen Dialekten
@@ -967,20 +971,34 @@ mit vorfalle in anderen spanischen Dialekten
 </p>
 </aside>
 
+<ul class="org-ul">
+<li class="fragment role-in">&bdquo;<i>Si votabas CiU, <b>tampoco no</b> avanzaban</i>&ldquo;
+<ul class="org-ul">
+<li>Wenn du CiU wähltest, auch-nicht nicht fortschritten 
+</li>
+</ul>
+</li>
+</ul>
+
 </section>
 <section id="sec-3-3-4" >
 
-<h4><span class="section-number-4">3.3.4</span> Ausbreitung von &sbquo;ser&lsquo; ggü. &sbquo;estar&lsquo; (Demarkierung?):</h4>
-<p class="fragment role-in">
--&gt; &bdquo;<i>No creo que tenga que decir que <b>soy</b> en España</i>&ldquo;
--&gt; Ich glaube nicht dass ich sagen soll, dass ich in Spanien bin (ser)
-</p>
+<h4><span class="section-number-4">3.3.4</span> Ausbreitung von &sbquo;ser&lsquo; vs. &sbquo;estar&lsquo; (Demarkierung?):</h4>
 <aside class="notes">
 <p>
 -ser wird benutzt in lokalen Konstruktionen
 -mit vorfalle in anderen spanischen Dialekten
 </p>
 </aside>
+
+<ul class="org-ul">
+<li class="fragment role-in">&bdquo;<i>No creo que tenga que decir que <b>soy</b> en España</i>&ldquo;
+<ul class="org-ul">
+<li>Ich glaube nicht dass ich sagen soll, dass ich in Spanien bin (ser)
+</li>
+</ul>
+</li>
+</ul>
 </section>
 
 </section>
@@ -1001,16 +1019,16 @@ Fragestellung: veraenderte Verwendung von Deiktika wird sich bestimmt auf Transf
 
 <h3><span class="section-number-3">4.1</span> Allgemeines:</h3>
 <p>
--&gt; Pragmatik Scope: &bdquo;Die Aspekten, die in einem deiktischen System differenziert werden&ldquo;
+-&gt; pragmatic scope: &bdquo;Die Aspekten, die in einem deiktischen System differenziert werden&ldquo;
 </p>
 <p class="fragment highlight-blue">
 a) bzgl welchen Gesprächsteilnehmers ist die Deixis definiert? (Sprecher, Addresat, beide&#x2026;)
 </p>
 <p class="fragment highlight-blue">
-b) wie viele Stufen von Deixis werden unterschieden (<sub>dies</sub>_, <span class="underline">jenes</span> vs. <span class="underline">este</span>. <span class="underline">ese</span>, <span class="underline">aquel</span>)?
+b) wie viele Stufen von Deixis werden unterschieden (dies, jenes vs. este, ese, aquel)?
 </p>
 <p class="fragment role-in">
--&gt; Pragmatik Scope von Deixis kann (dialektal, sprachenübergreifend) variieren.
+-&gt; pragmatic scope von Deixis kann (dialektal, sprachenübergreifend) variieren.
 </p>
 </section>
 
@@ -1212,10 +1230,12 @@ cat. aqui/alla: Nah/nicht nah zum Sprecher oder zum Addressat
 <h3><span class="section-number-3">4.4</span> Ergebnisse aus der Studie</h3>
 <img src="./images/results.jpg" alt="results.jpg" />
 
-<p>
--&gt; Relative exposure to Cat and Spa. (- = Cat/ + = Spa)
--&gt; Catalan life and ideology (Superindex für die beiden vorigen)
-</p>
+<ul class="org-ul">
+<li>Relative exposure to Cat and Spa. (- = Cat/ + = Spa)
+</li>
+<li>Catalan life and ideology (Superindex für die beiden vorigen)
+</li>
+</ul>
 </section>
 
 </section>
@@ -1232,7 +1252,7 @@ sind weniger salient -&gt; nicht bewusst
 </aside>
 
 <ol class="org-ol">
-<li>warum kann wird pragmatischer Scope überhaupt übertragen?
+<li>warum wird pragmatischer Scope überhaupt übertragen?
 </li>
 </ol>
 <p class="fragment role-in">
@@ -1303,12 +1323,12 @@ Faktoren eine Rolle spielen.
 <li>Fenster zur Sozioindexikalität
 </li>
 </ol>
-<p>
-<i>I submit that, wherever there is a difference in a pragmatic scope interpretation 
-associated with reference in Catalan and Spanish, there will be /potential</i> permeability
-in pragmatic reference and thus <i>potential</i> for pragmatic transfer (for either language
-or the other). Of course, <b>the realization of this potential may depend on various other
-linguistic or social factors</b>./
+<p class="fragment role-in">
+-&gt; <i>I submit that, wherever there is a difference in a pragmatic scope interpretation</i> 
+<i>associated with reference in Catalan and Spanish, there will be <b>potential</b> permeability</i>
+<i>in pragmatic reference and thus <b>potential</b> for pragmatic transfer (for either language</i>
+<i>or the other). Of course</i>, <b>the realization of this potential may depend on various other</b>
+<b>linguistic or social factors</b>.
 </p>
 </section>
 
