--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -87,14 +87,14 @@
 Mehr Info unter: 
 </p>
 <p class="fragment role-in">
-<a href="http:en.wikipedia.org/wiki/Catalan_self-determination_referendum">Referendum um die Unabhängigkeit</a>
+<a href="http://en.wikipedia.org/wiki/Catalan_self-determination_referendum">Referendum um die Unabhängigkeit</a>
 </p>
 </section>
 </section>
 <section>
 <section id="sec-1-2" >
 
-<h3><span class="section-number-3">1.2</span> Geschichtliche Verhältnisse</h3>
+<h3><span class="section-number-3">1.2</span> Geschichtliche Verhältnisse in Bezug auf die Sprachen</h3>
 <ul class="org-ul">
 <li class="fragment highlight-blue">700 Jahre Reconquista durch das Königktum Kastilliens führt
 Kastillianisch zur Machtposition.
@@ -102,10 +102,11 @@ Kastillianisch zur Machtposition.
 </ul>
 
 <ul class="org-ul">
-<li class="fragment highlight-blue">Daneben überleben aus dem romanischen Sprachzweig Katalanisch
+<li class="fragment highlight-blue">Daneben überleben aus dem romanischen Sprachzweig u.a Katalanisch
 und Galizisch, Mozarabisch stirbt aber aus.
 </li>
 </ul>
+<img src="./images/castillian.gif" alt="castillian.gif" />
 </section>
 <section id="sec-1-2-1" >
 
@@ -1282,20 +1283,10 @@ eher um sekundäre, zusätzliche Informationen zu einer lexikalischen Kernbedeut
 </li>
 </ul>
 <p>
-Opposition verloren. Demarkierung?
+Opposition verloren, meint er nicht einfach Demarkierung?
+-quitar (ir, referenzpunkt ist dem Sprecher nah), sacar (venir, referenzpunkt ist ausserhalb des Einflussbereiches des Sprechers)
+-Beispiel: saca al niño del pozo/ *quita al niño del pozo
 </p>
-<ul class="org-ul">
-<li><p>
-dafür spricht: 
-</p>
-<ul class="org-ul">
-<li>quitar/sacar/treure
-</li>
-<li>aehnliche Tendenz (ir/venir) in karibisch und US Grenzdialekten
-</li>
-</ul>
-</li>
-</ul>
 </aside>
 
 <p class="fragment role-in">
@@ -1307,6 +1298,16 @@ and locatives may be secondary in informational load to other, more primitive me
 -&gt; &bdquo;<i>the transfer associated
 with these words in Catalan Spanish is manifest as a <b>reduction of lexical oppositions</b>.</i>
 </p>
+<ul class="org-ul">
+<li class="fragment role-in">dafür spricht: 
+<ul class="org-ul">
+<li>quitar/sacar/treure
+</li>
+<li>aehnliche Tendenz (ir/venir) in karibisch und US Grenzdialekten
+</li>
+</ul>
+</li>
+</ul>
 
 </section>
 <section>
