--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -160,8 +160,7 @@ ODER
 
 <h4><span class="section-number-4">1.3.2</span> Was ist das Katalanische Spanisch?</h4>
 <p>
-Die klare Antwort ist: <span class="underline">Kontaktdialekt zwischen Kastillianisch (oder</span>
-<span class="underline">Aragonesisch) mit Katalonischem Einfluss</span>.
+Die klare Antwort ist: <span class="underline">Kontaktdialekt zwischen Kastillianisch mit Katalonischem Einfluss</span>.
 </p>
 <p class="fragment role-in">
 <b>ABER</b>
@@ -181,7 +180,7 @@ eigenständiger Dialekt betrachtet bzw. unerforscht.
 weniger Salienz des Katalanischen Spanischen.
 </p>
 <p class="fragment highlight-blue">
--&gt; <b>Bias</b>: Wahrnehmung als gebrochenes L2-Spanisch. Kastellianisch wird asl
+-&gt; <b>Bias</b>: Wahrnehmung als gebrochenes L2-Spanisch. Kastillianisch wird als
 die korrekte Variante rationalisiert.
 </p>
 
@@ -296,11 +295,18 @@ http://www20.gencat.cat/portal/site/Llengcat/
 -&gt; Wirkung der Krise
 </p>
 </aside>
+</section>
+
 
 </section>
-<section id="sec-2-1-5"  data-background="white">
+<section>
+<section id="sec-2-2" >
 
-<h4><span class="section-number-4">2.1.5</span> Verwendung des Katalanischen in Katalonien (Stand: 2003)</h4>
+<h3><span class="section-number-3">2.2</span> sprachlicher Gebrauch</h3>
+</section>
+<section id="sec-2-2-1"  data-background="white">
+
+<h4><span class="section-number-4">2.2.1</span> Verwendung des Katalanischen in Katalonien (Stand: 2003)</h4>
 <img src="./images/llengua_habitual.jpg" alt="llengua_habitual.jpg" />
 
 <aside class="notes">
@@ -310,9 +316,9 @@ http://www20.gencat.cat/portal/site/Llengcat/
 </aside>
 
 </section>
-<section id="sec-2-1-6" >
+<section id="sec-2-2-2" >
 
-<h4><span class="section-number-4">2.1.6</span> Mehrsprachigkeit (nach meist verwendeter Sprache geordnet) (Stand: 2013)</h4>
+<h4><span class="section-number-4">2.2.2</span> Mehrsprachigkeit in Katalonien (nach meist verwendeter Sprache geordnet) (Stand: 2013)</h4>
 <aside class="notes">
 <p>
 -&gt; aktueller und ausführlicher (leider beziehen sich die Statistiken auf das ganze Bundesland, man würde noch höhere Assoziation in BCN erwarten)
@@ -457,13 +463,13 @@ http://www20.gencat.cat/portal/site/Llengcat/
 </table>
 
 </section>
-<section id="sec-2-1-7" >
+<section id="sec-2-2-3" >
 
-<h4><span class="section-number-4">2.1.7</span> Verwedungsbereiche</h4>
+<h4><span class="section-number-4">2.2.3</span> Verwedungsbereiche (katalonienweit) (</h4>
 <aside class="notes">
 <p>
 -&gt; catalan-only überwiegt in <b>studium</b> und <b>regionale Verwaltung</b>
--&gt; es laesst sich keine eht groesse unterschied feststellen in Familienmietglied ggu. anderen Bereichen 
+-&gt; es laesst sich keine eht groesse diglossische unterschiede feststellen (aehnliche Verteilung beider Sprachen) 
 </p>
 </aside>
 
@@ -613,9 +619,9 @@ http://www20.gencat.cat/portal/site/Llengcat/
 </table>
 
 </section>
-<section id="sec-2-1-8" >
+<section id="sec-2-2-4" >
 
-<h4><span class="section-number-4">2.1.8</span> Kenntnisse des Katalanischen in Barcelona</h4>
+<h4><span class="section-number-4">2.2.4</span> Kenntnisse des Katalanischen in Barcelona</h4>
 <aside class="notes">
 <p>
 -&gt; Zurück in BCN
@@ -736,6 +742,14 @@ Robert E. Vann (2002)
 <section id="sec-3-2" >
 
 <h3><span class="section-number-3">3.2</span> Lexik (einige Beispiele)</h3>
+<aside class="notes">
+<p>
+Entlehnungen - Material aus L1 in L2
+Calque - Material aus L2 (Struktur/konstruktion aus L1)
+semantischer Transfer - Material aus L2 (Semantik aus L1)
+</p>
+</aside>
+
 <ul class="org-ul">
 <li>Entlehnungen (lexikalischer Transfer) 
 </li>
@@ -749,6 +763,13 @@ Robert E. Vann (2002)
 <section id="sec-3-2-1" >
 
 <h4><span class="section-number-4">3.2.1</span> Entlehnungen</h4>
+<aside class="notes">
+<p>
+Beispiel aus einem schriftlichen Corpus des Spanischen (8 mil. Tokens)
+Die Bevölkerung aus cat-sprachigen Provinzen macht fast 1/4 der gesamten spanischen Bevölkerung aus.
+</p>
+</aside>
+
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -792,7 +813,7 @@ Robert E. Vann (2002)
 
 <tr>
 <td class="left"><i>esplai</i></td>
-<td class="left">&#xa0;</td>
+<td class="left">-</td>
 <td class="left">Pionier-zentrum</td>
 </tr>
 </tbody>
@@ -805,13 +826,6 @@ Robert E. Vann (2002)
 <p class="fragment role-in">
 -&gt; &bdquo;<i>De ahí nos hemos ido Raquel y Jose con los nenes al esplai</i>&ldquo;
 </p>
-
-<aside class="notes">
-<p>
-Beispiel aus einem schriftlichen Corpus des Spanischen (8 mil. Tokens)
-Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen Bevölkerung aus.
-</p>
-</aside>
 
 </section>
 <section id="sec-3-2-2" >
@@ -910,7 +924,7 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 </p>
 
 <p class="fragment role-in">
--&gt; &bdquo;<i>Porque es una zona de inmigrantes, <b>entonces</b> hay&#x2026; [&#x2026;] gitanos.</i>&ldquo;
+-&gt; &bdquo;<i>Porque es una zona de inmigrantes, <b>entonces</b> hay [&#x2026;] gitanos.</i>&ldquo;
 </p>
 
 <p class="fragment role-in">
@@ -923,6 +937,13 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 <section id="sec-3-3" >
 
 <h3><span class="section-number-3">3.3</span> (interessanterere) Beispiele</h3>
+<aside class="notes">
+<p>
+hier handelt es sich um Dinge, die es in anderen Dialekten auch gibt, aber deren Frequ.
+in diesem Dialekt erhoeht ist.
+</p>
+</aside>
+
 </section>
 <section id="sec-3-3-1" >
 
@@ -932,6 +953,7 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 -*normal* in Ausdruecken wie &lsquo;hubo de todo eso&rsquo;
 </p>
 </aside>
+
 <ul class="org-ul">
 <li class="fragment role-in">&bdquo;<i>Porque es una zona de inmigrantes, entonces hay &#x2026; <b>de gitanos</b>.</i>&ldquo;
 <ul class="org-ul">
@@ -1038,6 +1060,11 @@ b) wie viele Stufen von Deixis werden unterschieden (dies, jenes vs. este, ese, 
 <section id="sec-4-2" >
 
 <h3><span class="section-number-3">4.2</span> Spanische und Catalanische Deixis:</h3>
+<aside class="notes">
+<p>
+Sprecher als Anhaltspunkt fuer die Dekodierung der deiktischen Ausdruecke.
+</p>
+</aside>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -1125,10 +1152,9 @@ b) wie viele Stufen von Deixis werden unterschieden (dies, jenes vs. este, ese, 
 <aside class="notes">
 <p>
 es. ir: Bewegung weg vom Sprecher
-cat. anar: Bewegung weder zum Sprecher noch zum Adressat
+cat. anar: Bewegung weder zum Sprecher noch zum Adressat-weg vom S und A
 es. venir: Bewegung zum Sprecher
 cat. venir: Bewegung zum Sprecher oder zum Addresat
-em vaig amb la falsa sensació
 </p>
 </aside>
 
@@ -1226,17 +1252,82 @@ cat. aqui/alla: Nah/nicht nah zum Sprecher oder zum Addressat
 
 </section>
 <section>
-<section id="sec-4-4"  data-background="white">
+<section id="sec-4-4" >
 
 <h3><span class="section-number-3">4.4</span> Ergebnisse aus der Studie</h3>
+</section>
+<section id="sec-4-4-1"  data-background="white">
+
+<h4><span class="section-number-4">4.4.1</span> Transferprozentsätze</h4>
+<aside class="notes">
+<p>
+fast 50% transfer, allerding mit groesser SD
+catalan life: multiplexity
+</p>
+</aside>
+
 <img src="./images/results.jpg" alt="results.jpg" />
 
 <ul class="org-ul">
-<li>Relative exposure to Cat and Spa. (- = Cat/ + = Spa)
+<li><i>Relative exposure to Cat and Spa</i> (&sbquo;minus&lsquo; steht für Cat // &sbquo;plus&rsquo;steht für Es.)
 </li>
-<li>Catalan life and ideology (Superindex für die beiden vorigen)
+<li><i>Catalan life and ideology</i> (Superindex für die beiden vorigen)
 </li>
 </ul>
+
+</section>
+<section id="sec-4-4-2"  data-background="white">
+
+<h4><span class="section-number-4">4.4.2</span> Correlation</h4>
+<aside class="notes">
+<p>
+-.71 (transfer-exposure) * .-80 (exposure-ideology) = .58 (transfer-ideology)
+</p>
+</aside>
+<p>
+<i>.images/correlation.jpg</i>
+</p>
+
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="left" />
+
+<col  class="left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="left">variablen</th>
+<th scope="col" class="left">p-Wert</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="left">relative exposure</td>
+<td class="left">p &lt; .00000</td>
+</tr>
+
+<tr>
+<td class="left">cat life and ideology</td>
+<td class="left">p &lt; .8513</td>
+</tr>
+
+<tr>
+<td class="left">cat life (single variable)</td>
+<td class="left">p &lt; .9506</td>
+</tr>
+
+<tr>
+<td class="left">ideology (single variable)</td>
+<td class="left">p &lt; .0001</td>
+</tr>
+</tbody>
+</table>
+
+<p>
+-&gt; politische Ideologie ist nur durch die Vermittlung einer dritten Variabel (exposure to catalan) mit dem Transfer korreliert.
+</p>
 </section>
 
 </section>
