--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -204,9 +204,6 @@ die korrekte Variante rationalisiert.
 <section id="sec-1-3-5"  data-background="white">
 
 <h4><span class="section-number-4">1.3.5</span> Beispiel franquistischer Propaganda</h4>
-<p>
-<img src="./images/caballero.jpg" alt="caballero.jpg" /> <img src="./images/franco.jpg" alt="franco.jpg" />
-</p>
 <aside class="notes">
 <p>
 Übersetzung:  Sprechen Sie richtig. Seien Sie patriotisch. Seien Sie nicht unraffiniert. 
@@ -214,11 +211,18 @@ Ein aufrichtiger Herr, wie Sie, spricht unsere offizielle Sprache - nämlich Kas
 Das ist patriotisch zu sein. Lang lebe Spanien die Disziplin und die Cervantes&rsquo;sche Sprache.
 </p>
 </aside>
+<img src="./images/caballero.jpg" alt="caballero.jpg" />
 
 </section>
 <section id="sec-1-3-6" >
 
-<h4><span class="section-number-4">1.3.6</span> Veränderung der Einstellungen</h4>
+<h4><span class="section-number-4">1.3.6</span> Beipiel 2</h4>
+<img src="./images/franco.jpg" alt="franco.jpg" />
+
+</section>
+<section id="sec-1-3-7" >
+
+<h4><span class="section-number-4">1.3.7</span> Veränderung der Einstellungen</h4>
 <aside class="notes">
 <p>
 -&gt; catalan-spanisch nicht mehr als eine &ldquo;Entartung&rdquo; des Kastilianischen sondern als die spanische Mundart Kataloniens.
