--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -469,7 +469,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 </section>
 <section id="sec-2-2-3" >
 
-<h4><span class="section-number-4">2.2.3</span> Verwedungsbereiche (katalonienweit) (</h4>
+<h4><span class="section-number-4">2.2.3</span> Verwedungsbereiche (katalonienweit)</h4>
 <aside class="notes">
 <p>
 -&gt; catalan-only überwiegt in <b>studium</b> und <b>regionale Verwaltung</b>
