--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -1347,10 +1347,9 @@ sind weniger salient -&gt; nicht bewusst
 </p>
 </aside>
 
-<ol class="org-ol">
-<li>warum wird pragmatischer Scope überhaupt übertragen?
-</li>
-</ol>
+<p>
+warum wird pragmatischer Scope überhaupt übertragen?
+</p>
 <p class="fragment role-in">
 -&gt; &bdquo;<i>the use and interpretation of pragmatic referents are inherently inconsistent</i>&ldquo;
 </p>
@@ -1360,10 +1359,9 @@ sind weniger salient -&gt; nicht bewusst
 
 </section>
 <section>
-<ol class="org-ol">
-<li>lexicalische Reduktion, Demarkierung?
-</li>
-</ol>
+<p>
+lexicalische Reduktion, Demarkierung?
+</p>
 
 <aside class="notes">
 <ul class="org-ul">
@@ -1415,10 +1413,9 @@ Faktoren eine Rolle spielen.
 </p>
 </aside>
 
-<ol class="org-ol">
-<li>Fenster zur Sozioindexikalität
-</li>
-</ol>
+<p>
+Fenster zur Sozioindexikalität
+</p>
 <p class="fragment role-in">
 -&gt; <i>I submit that, wherever there is a difference in a pragmatic scope interpretation</i> 
 <i>associated with reference in Catalan and Spanish, there will be <b>potential</b> permeability</i>
