--- a/gender.html
+++ b/gender.html
@@ -6,8 +6,8 @@
 <title>Gender differences in language use</title>
 <meta name="author" content="(Newmann et alii (2009))"/>
 
-<link rel="stylesheet" href="file:///Users/quique/.emacs.d/reveal/css/reveal.min.css"/>
-<link rel="stylesheet" href="file:///Users/quique/.emacs.d/reveal/css/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="./css/reveal.min.css"/>
+<link rel="stylesheet" href="./reveal/css/theme/beige.css" id="theme"/>
 <link rel="stylesheet" href="./extra.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -337,9 +337,24 @@ Click hier &#x2013;&gt;  <a href="http://www.liwc.net/descriptiontable1.php">Lin
 
 
 </section>
-<section id="sec-2-2-2" >
+<section id="sec-2-2-2"  data-background="white">
 
 <h4><span class="section-number-4">2.2.2</span> Example output of LIWC</h4>
+<aside class="notes">
+<p>
+orange - pronouns
+yellow - social words
+green - prepositions
+</p>
+</aside>
+
+<p>
+<img src="./images/female_raw_coloured.png" alt="female_raw_coloured.png" />
+<img src="./images/male_raw_coloured.png" alt="male_raw_coloured.png" />
+</p>
+
+</section>
+<section>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -487,7 +502,6 @@ Click hier &#x2013;&gt;  <a href="http://www.liwc.net/descriptiontable1.php">Lin
 </tbody>
 </table>
 </section>
-
 
 </section>
 <section id="sec-3" >
@@ -747,7 +761,7 @@ Crossover effect (why? I don&rsquo;t know - conversation: constraint free regist
 </tr>
 
 <tr>
-<td class="left">present-tense verbs</td>
+<td class="left">present verbs</td>
 <td class="right">.18</td>
 <td class="right">.14</td>
 <td class="right">.04</td>
