--- a/gender.html
+++ b/gender.html
@@ -7,7 +7,7 @@
 <meta name="author" content="(Newmann et alii (2009))"/>
 
 <link rel="stylesheet" href="./css/reveal.min.css"/>
-<link rel="stylesheet" href="./reveal/css/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
 <link rel="stylesheet" href="./extra.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
