--- a/gender.html
+++ b/gender.html
@@ -15,7 +15,7 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = 'file:///Users/quique/.emacs.d/reveal/css/print/pdf.css';
+        link.href = ./css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -988,8 +988,8 @@ Check the paper!
 </div>
 </div>
 
-<script src="file:///Users/quique/.emacs.d/reveal/lib/js/head.min.js"></script>
-<script src="file:///Users/quique/.emacs.d/reveal/js/reveal.min.js"></script>
+<script src="./lib/js/head.min.js"></script>
+<script src="./js/reveal.min.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -1016,10 +1016,10 @@ transitionSpeed: 'nil',
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: 'file:///Users/quique/.emacs.d/reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
- { src: 'file:///Users/quique/.emacs.d/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'file:///Users/quique/.emacs.d/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'file:///Users/quique/.emacs.d/reveal/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+ { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+ { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 ]
 });
 </script>
