--- a/gender.html
+++ b/gender.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Gender differences in language use</title>
-<meta name="author" content="(Newmann et alii (2009))"/>
+<meta name="author" content="(Newman et alii (2009))"/>
 
 <link rel="stylesheet" href="./css/reveal.min.css"/>
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
@@ -26,7 +26,7 @@
 <div class="slides">
 <section>
 <h1>Gender differences in language use</h1>
-<h2>Newmann et alii (2009)</h2>
+<h2>Newman et alii (2009)</h2>
 <h2><a href="mailto:http://emanjavacas.github.io/slides/">http://emanjavacas.github.io/slides/</a></h2>
 <h2></h2></section>
 <section>
@@ -982,7 +982,7 @@ Check the paper!
 
 
 <p>
-&ldquo;Gender differences in language use&rdquo; Newmann et alii (2009)
+&ldquo;Gender differences in language use&rdquo; Newman et alii (2009)
 </p>
 </section>
 </div>
