--- a/troonredes.html
+++ b/troonredes.html
@@ -32,7 +32,7 @@
 </section>
 <section id="table-of-contents">
 <div id="table-of-contents">
-<h2>Table of Contents</h2>
+<h2>Inhoudstafel</h2>
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#/slide-sec-1">1. Inleiding</a></li>
@@ -110,7 +110,7 @@ Technologieën die grote hoeveelheden tekst kunnen analyseren en in verschillend
 
 
 <div class="figure">
-<p><img src="./img/bible_sentiment.png" alt="bible_sentiment.png" />
+<p><img src="./images/bible_sentiment.png" alt="bible_sentiment.png" />
 </p>
 </div>
 
@@ -130,7 +130,7 @@ Technologieën die grote hoeveelheden tekst kunnen analyseren en in verschillend
 
 
 <div class="figure">
-<p><img src="./img/standaard.jpg" alt="standaard.jpg" />
+<p><img src="./images/standaard.jpg" alt="standaard.jpg" />
 </p>
 </div>
 </section>
