--- a/troonredes.html
+++ b/troonredes.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
 <meta charset="utf-8"/>
 <title>&lsquo;Topic modeling&rsquo; van de Nederlandse Troonredes</title>
