--- a/gender.html
+++ b/gender.html
@@ -6,8 +6,8 @@
 <title>Gender differences in language use</title>
 <meta name="author" content="(Newmann et alii (2009))"/>
 
-<link rel="stylesheet" href="file:///Users/quique/.emacs.d/reveal.js-3.1.0/css/reveal.css"/>
-<link rel="stylesheet" href="file:///Users/quique/.emacs.d/reveal.js-3.1.0/css/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="./css/reveal.css"/>
+<link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
 <link rel="stylesheet" href="./extra.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -15,7 +15,7 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = 'file:///Users/quique/.emacs.d/reveal.js-3.1.0/css/print/pdf.css';
+        link.href = './css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -998,8 +998,8 @@ Check the paper!
 </div>
 </div>
 
-<script src="file:///Users/quique/.emacs.d/reveal.js-3.1.0/lib/js/head.min.js"></script>
-<script src="file:///Users/quique/.emacs.d/reveal.js-3.1.0/js/reveal.js"></script>
+<script src="./lib/js/head.min.js"></script>
+<script src="./js/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -1031,10 +1031,10 @@ multiplex: {
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: 'file:///Users/quique/.emacs.d/reveal.js-3.1.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
- { src: 'file:///Users/quique/.emacs.d/reveal.js-3.1.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'file:///Users/quique/.emacs.d/reveal.js-3.1.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'file:///Users/quique/.emacs.d/reveal.js-3.1.0/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+ { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+ { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 ]
 });
 </script>
