Added new presentation and refactor

--- a/gender.html
+++ b/gender.html
@@ -71,13 +71,13 @@
 
 
 <div class="figure">
-<p><img src="./images/female_raw.jpg" alt="female_raw.jpg" />
+<p><img src="./img/female_raw.jpg" alt="female_raw.jpg" />
 </p>
 </div>
 
 
 <div class="figure">
-<p><img src="./images/male_raw.jpg" alt="male_raw.jpg" />
+<p><img src="./img/male_raw.jpg" alt="male_raw.jpg" />
 </p>
 </div>
 
@@ -249,7 +249,7 @@ Analysis of the correlation between gender and sentence length:
 
 
 <div class="figure">
-<p><img src="./images/sentence_length_200.jpg" alt="sentence_length_200.jpg" />
+<p><img src="./img/sentence_length_200.jpg" alt="sentence_length_200.jpg" />
 </p>
 </div>
 
@@ -298,7 +298,7 @@ Analysis of the correlation between gender and sentence length:
 
 
 <div class="figure">
-<p><img src="./images/registers.jpg" alt="registers.jpg" />
+<p><img src="./img/registers.jpg" alt="registers.jpg" />
 </p>
 </div>
 
@@ -357,8 +357,8 @@ green - prepositions
 
 
 <p>
-<img src="./images/female_raw_coloured.png" alt="female_raw_coloured.png" />
-<img src="./images/male_raw_coloured.png" alt="male_raw_coloured.png" />
+<img src="./img/female_raw_coloured.png" alt="female_raw_coloured.png" />
+<img src="./img/male_raw_coloured.png" alt="male_raw_coloured.png" />
 </p>
 
 </section>
