--- a/troonredes.html
+++ b/troonredes.html
@@ -110,7 +110,7 @@ Technologieën die grote hoeveelheden tekst kunnen analyseren en in verschillend
 
 
 <div class="figure">
-<p><img src="./images/bible_sentiment.png" alt="bible_sentiment.png" />
+<p><img src="./img/bible_sentiment.png" alt="bible_sentiment.png" />
 </p>
 </div>
 
@@ -130,7 +130,7 @@ Technologieën die grote hoeveelheden tekst kunnen analyseren en in verschillend
 
 
 <div class="figure">
-<p><img src="./images/standaard.jpg" alt="standaard.jpg" />
+<p><img src="./img/standaard.jpg" alt="standaard.jpg" />
 </p>
 </div>
 </section>
@@ -303,7 +303,7 @@ Ann het einde groepeer je woorderen naar kleuren en elke groep is een topic.
 <section>
 
 <div class="figure">
-<p><img src="./images/IntroToLDA.png" alt="IntroToLDA.png" />
+<p><img src="./img/IntroToLDA.png" alt="IntroToLDA.png" />
 </p>
 </div>
 
@@ -478,7 +478,7 @@ Let op dat elk document is nu gerepresenteerd als een verdeling van topics
 <section>
 
 <div class="figure">
-<p><img src="./images/troonredes_test_5.png" alt="troonredes_test_5.png" />
+<p><img src="./img/troonredes_test_5.png" alt="troonredes_test_5.png" />
 </p>
 </div>
 
@@ -596,7 +596,7 @@ onze topics zijn eigenlijk een mengeling van veel topics (niet genoeg woorderen)
 <h2 id="sec-4"><span class="section-number-2">4</span> Einde</h2>
 
 <div class="figure">
-<p><img src="./images/bedankt.png" alt="bedankt.png" />
+<p><img src="./img/bedankt.png" alt="bedankt.png" />
 </p>
 </div>
 
