--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -100,7 +100,7 @@ und Galizisch, Mozarabisch stirbt aber aus.</li>
 </ul>
 
 <div class="figure">
-<p><img src="./images/castillian.gif" alt="castillian.gif" />
+<p><img src="./img/castillian.gif" alt="castillian.gif" />
 </p>
 </div>
 </section>
@@ -149,7 +149,7 @@ ODER
 
 
 <div class="figure">
-<p><img src="./images/dialekten.png" alt="dialekten.png" />
+<p><img src="./img/dialekten.png" alt="dialekten.png" />
 </p>
 </div>
 
@@ -208,7 +208,7 @@ Das ist patriotisch zu sein. Lang lebe Spanien die Disziplin und die Cervantes&r
 </aside>
 
 <div class="figure">
-<p><img src="./images/caballero.jpg" alt="caballero.jpg" />
+<p><img src="./img/caballero.jpg" alt="caballero.jpg" />
 </p>
 </div>
 
@@ -217,7 +217,7 @@ Das ist patriotisch zu sein. Lang lebe Spanien die Disziplin und die Cervantes&r
 <h4 id="sec-1-3-6"><span class="section-number-4">1.3.6</span> Beipiel 2</h4>
 
 <div class="figure">
-<p><img src="./images/franco.jpg" alt="franco.jpg" />
+<p><img src="./img/franco.jpg" alt="franco.jpg" />
 </p>
 </div>
 
@@ -269,7 +269,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 
 
 <div class="figure">
-<p><img src="./images/einwohner.png" alt="einwohner.png" />
+<p><img src="./img/einwohner.png" alt="einwohner.png" />
 </p>
 </div>
 
@@ -278,7 +278,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 <h4 id="sec-2-1-2"><span class="section-number-4">2.1.2</span> Entwicklung der Bevölkerung</h4>
 
 <div class="figure">
-<p><img src="./images/nationalitat.png" alt="nationalitat.png" />
+<p><img src="./img/nationalitat.png" alt="nationalitat.png" />
 </p>
 </div>
 <aside class="notes">
@@ -292,7 +292,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 <h4 id="sec-2-1-3"><span class="section-number-4">2.1.3</span> Bevölkerung nach Geburtsort</h4>
 
 <div class="figure">
-<p><img src="./images/geburtsort.png" alt="geburtsort.png" />
+<p><img src="./img/geburtsort.png" alt="geburtsort.png" />
 </p>
 </div>
 
@@ -310,7 +310,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 
 
 <div class="figure">
-<p><img src="./images/migrationsbewegungen.png" alt="migrationsbewegungen.png" />
+<p><img src="./img/migrationsbewegungen.png" alt="migrationsbewegungen.png" />
 </p>
 </div>
 
@@ -334,7 +334,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 
 
 <div class="figure">
-<p><img src="./images/llengua_habitual.jpg" alt="llengua_habitual.jpg" />
+<p><img src="./img/llengua_habitual.jpg" alt="llengua_habitual.jpg" />
 </p>
 </div>
 
@@ -764,7 +764,7 @@ http://www20.gencat.cat/portal/site/Llengcat/
 <h3 id="sec-3-1"><span class="section-number-3">3.1</span> Phonologie</h3>
 
 <div class="figure">
-<p><img src="./images/phonologie.jpg" alt="phonologie.jpg" />
+<p><img src="./img/phonologie.jpg" alt="phonologie.jpg" />
 </p>
 </div>
 
@@ -1299,7 +1299,7 @@ catalan life: multiplexity
 
 
 <div class="figure">
-<p><img src="./images/results.jpg" alt="results.jpg" />
+<p><img src="./img/results.jpg" alt="results.jpg" />
 </p>
 </div>
 
@@ -1320,7 +1320,7 @@ catalan life: multiplexity
 
 </aside>
 <p>
-<i>.images/correlation.jpg</i>
+<i>./img/correlation.jpg</i>
 </p>
 
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
