--- a/urban_tweeters.html
+++ b/urban_tweeters.html
@@ -415,14 +415,13 @@ Only known available system is <a href="http://truthy.indiana.edu/botornot/">Bot
 <section>
 <section id="slide-sec-3-2-2">
 <h4 id="sec-3-2-2"><span class="section-number-4">3.2.2</span> Results</h4>
-</section>
-<section>
 
 <div class="figure">
 <p><img src="./img/segregation_corr.png" alt="segregation_corr.png" />
 </p>
 </div>
-
+</section>
+<section>
 <p>
 \(R^2\) 0.87
 </p>
@@ -610,6 +609,9 @@ Can we establish mobility patterns based on the language of tweets?
 <h3 id="sec-6-1"><span class="section-number-3">6.1</span> Analyse locality patterns</h3>
 <ul>
 <li>How tight together are speakers of the same language?</li>
+
+</ul>
+<ul class="fragment roll-in">
 <li>Consider multiple clusters (language centroids)</li>
 
 </ul>
@@ -621,6 +623,9 @@ Can we establish mobility patterns based on the language of tweets?
 <h3 id="sec-6-2"><span class="section-number-3">6.2</span> Tourism detection</h3>
 <ul>
 <li>Assign users to the country from which the majority of their tweets came. (Hawelka et al. 2014)</li>
+
+</ul>
+<ul class="fragment roll-in">
 <li>Focused sampling of user timelines.</li>
 
 </ul>
