--- a/urban_tweeters.html
+++ b/urban_tweeters.html
@@ -389,7 +389,7 @@ Only known available system is <a href="http://truthy.indiana.edu/botornot/">Bot
 </ul>
 
 <ul class="fragment roll-in">
-<li>Average difference between disproportionality in organizational unit and total disproportionality weighted by total disproportionality</li>
+<li>Average difference between disproportionality in organizational unit and total disproportionality all divided by total disproportionality</li>
 
 </ul>
 
