--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a> Gender differences in language Use</li>
 	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes</li>
 	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter</li>
+	  <li><a href="http://emanjavcas.github.io/slides/asynchronous.html">Corpus linguistics 2.0</a>
+	  </li>
 	</ul>
       </section>
       <footer>
