--- a/asynchronous.html
+++ b/asynchronous.html
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
 
-<link rel="stylesheet" href="./local.css"/>
+<link rel="stylesheet" href="./extra_asynchronous.css"/>
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -27,18 +27,14 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">From language community to individual and from individual researcher to team-based research</h1><h2 class="author">Peter Petré &amp; Enrique Manjavacas</h2><h2 class="date">17/06/2016</h2><p class="date">Created: 2016-06-16 Do 16:27</p>
+<section id="sec-title-slide"><h1 class="title">From language community to individual and from individual researcher to team-based research</h1><h2 class="author">Peter Petré &amp; Enrique Manjavacas</h2><h2 class="date">17/06/2016</h2><p class="date">Created: 2016-06-16 Do 23:41</p>
 </section>
 
 <section>
 <section id="slide-orgheadline2">
 <h2 id="orgheadline2">From individual researcher to team-based research</h2>
-<ul>
-<li class="fragment roll-in">Current increase in team-based corpus-linguistics projects.</li>
-
-</ul>
-
-</section>
+<div class="outline-text-2" id="text-orgheadline2">
+</div></section>
 </section>
 <section>
 <section id="slide-orgheadline1">
@@ -55,8 +51,19 @@
 </section>
 </section>
 <section>
-<section id="slide-orgheadline5">
-<h2 id="orgheadline5">Linkage problem</h2>
+<section id="slide-orgheadline3">
+<h2 id="orgheadline3">Problems</h2>
+<ul>
+<li class="fragment roll-in">Linkage problem</li>
+<li class="fragment roll-in">Synchronization problem</li>
+
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-orgheadline6">
+<h2 id="orgheadline6">Linkage problem</h2>
 <aside class="notes">
 <p>
 Once hits have been extracted there is no obvious/easy way of referencing them back to the corpus
@@ -67,32 +74,34 @@ Once hits have been extracted there is no obvious/easy way of referencing them b
 </section>
 </section>
 <section>
-<section id="slide-orgheadline3">
-<h3 id="orgheadline3">Typical workflow</h3>
-<ul>
-<li class="fragment roll-in">Corpus Query Engine (CWB-CQP, BlackLab, SketchEngine, etc..)</li>
-<li class="fragment roll-in">-&gt;</li>
-<li class="fragment roll-in">Text-Editor / Spreadsheet</li>
+<section id="slide-orgheadline4">
+<h3 id="orgheadline4">Typical workflow</h3>
 
-</ul>
+<div class="figure">
+<p><img src="./img/querytospread.png" alt="querytospread.png" class="fragment roll-in" />
+</p>
+</div>
+
+<div class="figure">
+<p><img src="./img/spreadtoquery.png" alt="spreadtoquery.png" class="fragment roll-in" />
+</p>
+</div>
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline4">
-<h3 id="orgheadline4">Problems</h3>
+<section id="slide-orgheadline5">
+<h3 id="orgheadline5">Consequences</h3>
 <ul>
 <li class="fragment roll-in">Spread of non-reusable data</li>
 
 </ul>
 
-
-
 </section>
 </section>
 <section>
-<section id="slide-orgheadline8">
-<h2 id="orgheadline8">Synchronization problem</h2>
+<section id="slide-orgheadline9">
+<h2 id="orgheadline9">Synchronization problem</h2>
 <aside class="notes">
 <p>
 Annotations are being created by different researchers and have to derive in
@@ -114,8 +123,8 @@ Two types of synchronization problems:
 </section>
 </section>
 <section>
-<section id="slide-orgheadline6">
-<h3 id="orgheadline6">Intrinsic</h3>
+<section id="slide-orgheadline7">
+<h3 id="orgheadline7">Intrinsic</h3>
 <p>
 Unifying annotation schemes and their usage.
 </p>
@@ -137,8 +146,8 @@ We can list a number of issues which have mostly to do with the fact that annota
 </section>
 </section>
 <section>
-<section id="slide-orgheadline7">
-<h3 id="orgheadline7">Extrinsic</h3>
+<section id="slide-orgheadline8">
+<h3 id="orgheadline8">Extrinsic</h3>
 <p>
 Fundamental problem of collaborative software/distributed systems.
 </p>
@@ -150,22 +159,18 @@ documents without overwriting each other&rsquo;s changes&rdquo;
 </p>
 </blockquote>
 
-
-</section>
-</section>
-<section>
-<section id="slide-orgheadline9">
-<h2 id="orgheadline9">Linkage Problem</h2>
-<ul>
-<li></li>
-
-</ul>
-
 </section>
 </section>
 <section>
 <section id="slide-orgheadline10">
 <h2 id="orgheadline10">Application-based approach</h2>
+<aside class="notes">
+<p>
+Code something that seems somehow obvious, but for which (to our knowledge)
+no implementation exists.
+</p>
+
+</aside>
 
 </section>
 </section>
@@ -179,18 +184,11 @@ documents without overwriting each other&rsquo;s changes&rdquo;
 
 </ul>
 
-<aside class="notes">
-<p>
-
-</p>
-
-</aside>
-
 </section>
 <section>
 <ul>
 <li class="fragment roll-in">Encompass <b>Corpus Query Engine</b> + <b>Annotation Interface</b></li>
-<li class="fragment roll-in">Enable synchronized real-time annotation of corpus positions</li>
+<li class="fragment roll-in">Enable synchronized real-time annotation of corpus material.</li>
 
 </ul>
 
@@ -216,7 +214,7 @@ Centralized architecture, allows us to ensure that annotations are kept in synch
 <section id="slide-orgheadline11">
 <h4 id="orgheadline11">Web-based Client</h4>
 <ul>
-<li class="fragment roll-in">Real-time feedback client-to-client following a Pub/Sub architecture.</li>
+<li class="fragment roll-in">Real-time feedback client-to-client following a <b>Pub/Sub</b> architecture.</li>
 <li class="fragment roll-in">Subscribers are assigned roles with different permissions. (control access to resources)</li>
 <li class="fragment roll-in">Conflicts are explicitely resolved and documented. (WIP)</li>
 
@@ -237,13 +235,13 @@ Centralized architecture, allows us to ensure that annotations are kept in synch
 <section id="slide-orgheadline16">
 <h2 id="orgheadline16">Added advantages</h2>
 <ul>
-<li class="fragment roll-in">Reciprocal supervision (Am I using the categories as my peers do?)</li>
 <li class="fragment roll-in">Structured annotation data:
 <ul>
 <li>What parts and to what extent can linguistic annotation be automated.</li>
 <li>Incremental reindexing of the corpus + annotations.</li>
 
 </ul></li>
+<li class="fragment roll-in">Reciprocal supervision (Am I using the categories as my peers do?)</li>
 <li class="fragment roll-in">Decoupling of front-end and query-engine (swap engines).</li>
 
 </ul>
