--- a/asynchronous.html
+++ b/asynchronous.html
@@ -27,7 +27,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">From language community to individual and from individual researcher to team-based research</h1><h2 class="author">Peter Petré &amp; Enrique Manjavacas</h2><h2 class="date">17/06/2016</h2><p class="date">Created: 2016-06-16 Do 23:41</p>
+  <section id="sec-title-slide"><h1 class="title">From language community to individual and from individual researcher to team-based research</h1><h2 class="author">Peter Petré &amp; Enrique Manjavacas</h2><h2 class="date">17/06/2016</h2>
 </section>
 
 <section>
