--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a> Gender differences in language Use</li>
 	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes</li>
 	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter</li>
-
+	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</li>
 	</ul>
       </section>
       <footer>
