--- a/troonredes.html
+++ b/troonredes.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="./css/reveal.css"/>
 <link rel="stylesheet" href="./css/theme/serif.css" id="theme"/>
-<link rel="stylesheet" href="./extra.css"/>
+<link rel="stylesheet" href="./css/extra.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
     if( window.location.search.match( /print-pdf/gi ) ) {
