--- a/urban_tweeters.html
+++ b/urban_tweeters.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="./css/reveal.css"/>
 <link rel="stylesheet" href="./css/theme/white.css" id="theme"/>
-<link rel="stylesheet" href="./extra_multilingualism.css"/>
+<link rel="stylesheet" href="./css/extra_urban_tweeters.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
     if( window.location.search.match( /print-pdf/gi ) ) {
