--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes</li>
 	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter</li>
 	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</a> From language community to individual and from individual researcher to team-based research</li>
-          <li><a href="http://emanjavacas.github.io/slides/git.html">Git course</a> Hands-on introduction to git/GitHub</li>
+          <li><a href="http://emanjavacas.github.io/slides/git_intro.html">Git course</a> Hands-on introduction to git/GitHub</li>
 	</ul>
       </section>
       <footer>
