--- a/git_intro.html
+++ b/git_intro.html
@@ -390,6 +390,31 @@ Track the remote
 </div>
 
 </section>
+<section>
+<p>
+Add files to the repository
+</p>
+
+<div class="org-src-container">
+
+<pre  class="src src-bash">$ git add --all
+</pre>
+</div>
+
+</section>
+<section>
+<p>
+Commit changes to the remote
+</p>
+
+<div class="org-src-container">
+
+<pre  class="src src-bash">$ git push -u origin master
+</pre>
+</div>
+
+
+</section>
 <section id="slide-orgheadline20">
 <h4 id="orgheadline20"><span class="section-number-4">4.1.2</span> Using GitHub Desktop</h4>
 </section>
